--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
             <div class="navbar navbar-default navbar-fixed-top hidden-xs hidden-sm">
                 <div class="container">
                     <div class="navbar-header">
-                        <a href="bootindex.html" class="navbar-brand">Nick Peddie</a>
+                        <a href="index.html" class="navbar-brand">Nick Peddie</a>
                     </div>
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="bootindex.html">About</a></li>
+                        <li><a href="index.html">About</a></li>
                         <li><a href="portfolio.html">Portfolio</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
@@ -32,10 +32,10 @@
             <div class="navbar navbar-default  hidden-lg hidden-md">
                 <div class="container">
                     <div class="navbar-header">
-                        <a href="bootindex.html" class="navbar-brand">Nick Peddie</a>
+                        <a href="index.html" class="navbar-brand">Nick Peddie</a>
                     </div>
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="bootindex.html">About</a></li>
+                        <li><a href="index.html">About</a></li>
                         <li><a href="portfolio.html">Portfolio</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
