--- a/index.html
+++ b/index.html
@@ -14,31 +14,16 @@
 
 <body>
     <div id="wrapper">
-        <nav>
-            <div class="navbar navbar-default navbar-fixed-top hidden-xs hidden-sm">
-                <div class="container">
-                    <div class="navbar-header">
-                        <a href="index.html" class="navbar-brand">Nick Peddie</a>
-                    </div>
-                    <ul class="nav navbar-nav navbar-right">
-                        <li><a href="index.html">About</a></li>
-                        <li><a href="portfolio.html">Portfolio</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                    </ul>
+        <nav class="navbar sticky-top navbar-light bg-dark">
+            <div class="container">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="index.html">Nick Peddie</a>
                 </div>
-            </div>
-            <!-- navbar for small screen -->
-            <div class="navbar navbar-default  hidden-lg hidden-md">
-                <div class="container">
-                    <div class="navbar-header">
-                        <a href="index.html" class="navbar-brand">Nick Peddie</a>
-                    </div>
-                    <ul class="nav navbar-nav navbar-right">
-                        <li><a href="index.html">About</a></li>
-                        <li><a href="portfolio.html">Portfolio</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                    </ul>
-                </div>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="index.html">About</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
             </div>
         </nav>
 
